@@ -3396,6 +3396,7 @@ static int NumericValue(int c)
     int seendot = (c == '.');
     int seenexp = 0;
     int last = c;
+    int nd = 0;
     DECLARE_YYTEXT_BUFP(yyp);
     YYTEXT_PUSH(c, yyp);
     /* We don't care about other than ASCII digits */
@@ -3407,7 +3408,12 @@ static int NumericValue(int c)
                 break;
             YYTEXT_PUSH(c, yyp);
             while (isdigit(c = xxgetc()) || ('a' <= c && c <= 'f') || ('A' <= c && c <= 'F'))
+            {
                 YYTEXT_PUSH(c, yyp);
+                nd++;
+            }
+            if (nd == 0)
+                return ERROR;
             break;
         }
         if (c == 'E' || c == 'e')
@@ -3419,7 +3425,14 @@ static int NumericValue(int c)
             YYTEXT_PUSH(c, yyp);
             c = xxgetc();
             if (!isdigit(c) && c != '+' && c != '-')
-                break;
+                return ERROR;
+            if (c == '+' || c == '-')
+            {
+                YYTEXT_PUSH(c, yyp);
+                c = xxgetc();
+                if (!isdigit(c))
+                    return ERROR;
+            }
         }
         if (c == '.')
         {
